# Firmable-Company-data-pipeline

./: README.md  pyproject.toml  requirements.txt  run_pipeline.py
Data/: instruction.txt.txt
db/: ddl_scripts.sql
extract/: abr_parser.py  commoncrawl_scraper.py
test/: entity_matching_test.py
transform/: data_cleaning.py  entity_matching.py
