[project]
name = "firmable-etl-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fuzzywuzzy>=0.18.0",
    "lxml>=6.0.2",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "pyarrow>=22.0.0",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "tldextract>=5.3.0",
    "tqdm>=4.67.1",
    "warcio>=1.7.5",
]
